Anonymous | Login | 2021-01-17 00:14 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031102 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-10-24 13:43 | 2020-12-02 17:12 | ||||
Reporter | kgv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031102: Visualization, AIS_ViewController - AIS_DragAction_Stop is never emitted on mouse unclick | ||||||||
Description | Due to resetting click counter within AIS_ViewController::UpdateMousePosition() handler, AIS_DragAction_Stop never happens on mouse unclick (it is emitted properly at releasing finger touch). | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0088569) git (administrator) 2019-10-24 13:45 |
Branch CR31102 has been created by kgv. SHA-1: 1b0f6fdb1debf4a715173fa91c9d859120382718 Detailed log of new commits: Author: kgv Date: Thu Oct 24 13:44:49 2019 +0300 0031102: Visualization, AIS_ViewController - AIS_DragAction_Stop is never emitted on mouse unclick AIS_ViewController::UpdateMousePosition() now sets myMouseStopDragOnUnclick flag to emit AIS_DragAction_Stop on mouse unclick. |
(0088576) kgv (developer) 2019-10-24 17:06 |
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31102-master-KGV/ [^] |
(0088588) osa (developer) 2019-10-25 09:36 |
The patch was reviewed without remarks |
(0088855) git (administrator) 2019-11-10 11:41 |
Branch CR31102 has been deleted by inv. SHA-1: 1b0f6fdb1debf4a715173fa91c9d859120382718 |
![]() |
|||
occt: master 215dd331
Timestamp: 2019-10-24 10:44:49 Author: kgv Committer: apn [ Details ] [ Diff ] |
0031102: Visualization, AIS_ViewController - AIS_DragAction_Stop is never emitted on mouse unclick AIS_ViewController::UpdateMousePosition() now sets myMouseStopDragOnUnclick flag to emit AIS_DragAction_Stop on mouse unclick. |
||
mod - src/AIS/AIS_ViewController.cxx | [ Diff ] [ File ] | ||
mod - src/AIS/AIS_ViewController.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-10-24 13:43 | kgv | New Issue | |
2019-10-24 13:43 | kgv | Assigned To | => kgv |
2019-10-24 13:45 | git | Note Added: 0088569 | |
2019-10-24 13:48 | kgv | Relationship added | child of 0030507 |
2019-10-24 13:48 | kgv | Product Version | => 7.4.0 |
2019-10-24 13:55 | kgv | Relationship added | related to 0031103 |
2019-10-24 17:06 | kgv | Note Added: 0088576 | |
2019-10-24 17:06 | kgv | Assigned To | kgv => osa |
2019-10-24 17:06 | kgv | Status | new => resolved |
2019-10-25 09:36 | osa | Note Added: 0088588 | |
2019-10-25 09:36 | osa | Assigned To | osa => bugmaster |
2019-10-25 09:36 | osa | Status | resolved => reviewed |
2019-10-26 19:48 | apn | Test case number | => Not needed |
2019-10-28 01:51 | apn | Changeset attached | => occt master 215dd331 |
2019-10-28 01:51 | apn | Assigned To | bugmaster => apn |
2019-10-28 01:51 | apn | Status | reviewed => verified |
2019-10-28 01:51 | apn | Resolution | open => fixed |
2019-11-10 11:41 | git | Note Added: 0088855 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |