0031102: Visualization, AIS_ViewController - AIS_DragAction_Stop is never emitted on mouse unclick

AIS_ViewController::UpdateMousePosition() now sets myMouseStopDragOnUnclick flag
to emit AIS_DragAction_Stop on mouse unclick.