src/AIS/AIS_ViewController.hxx
@@ -647,6 +647,7 @@ protected: //! @name mouse input variables
   Aspect_VKeyMouse    myMousePressed;             //!< active mouse buttons
   Aspect_VKeyFlags    myMouseModifiers;           //!< active key modifiers passed with last mouse event
   Standard_Integer    myMouseSingleButton;        //!< index of mouse button pressed alone (>0)
+  Standard_Boolean    myMouseStopDragOnUnclick;   //!< queue stop dragging even with at next mouse unclick
 
 protected: //! @name multi-touch input variables
 
